@@ -40,6 +40,7 @@ export(dynEGA.ind.pop)
 export(entropyFit)
 export(ergoInfo)
 export(glla)
+export(hierEGA)
 export(invariance)
 export(itemStability)
 export(mctest.ergoInfo)
