@@ -1,12 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/riEGA.R
-\name{riEGA}
-\alias{riEGA}
-\title{Random-Intercept \code{\link[EGAnet]{EGA}}}
+% Please edit documentation in R/hierEGA.R
+\name{hierEGA}
+\alias{hierEGA}
+\title{Hierarchical \code{\link[EGAnet]{EGA}}}
 \usage{
-riEGA(
+hierEGA(
   data,
-  n = NULL,
+  scores = c("factor", "network"),
   uni.method = c("expand", "LE"),
   corr = c("cor_auto", "pearson", "spearman"),
   model = c("glasso", "TMFG"),
@@ -16,19 +16,21 @@ riEGA(
   plot.EGA = TRUE,
   plot.type = c("GGally", "qgraph"),
   plot.args = list(),
-  estimator = c("auto", "WLSMV", "MLR"),
-  lavaan.args = list(),
   verbose = TRUE
 )
 }
 \arguments{
 \item{data}{Matrix or data frame.
-Variables (down columns) or correlation matrix.
-If the input is a correlation matrix,
-then argument \code{n} (number of cases) is \strong{required}}
+Variables (down columns) only.
+Does not accept correlation matrices}
 
-\item{n}{Integer.
-Sample size if \code{data} provided is a correlation matrix}
+\item{scores}{Character.
+How should scores for the lower-order structure be estimated?
+Defaults to \code{"network"} for network scores computed using
+the \code{\link[EGAnet]{net.scores}} function.
+Set to \code{"factor"} for factor scores computed using
+\code{\link[psych]{fa}}. Factors are assumed to be correlated
+using the \code{"oblimin"} rotation}
 
 \item{uni.method}{Character.
 What unidimensionality method should be used? 
@@ -156,20 +158,6 @@ more details and examples}
 
 }}
 
-\item{estimator}{Character.
-Estimator to use for random-intercept model (see \href{https://lavaan.ugent.be/tutorial/est.html}{Estimators}
-for more details).
-Defaults to \code{"auto"}, which selects \code{"MLR"} for continuous data and
-\code{"WLSMV"} for mixed and categorical data.
-Data are considered continuous data if they have 6 or
-more categories (see Rhemtulla, Brosseau-Liard, & Savalei, 2012)}
-
-\item{lavaan.args}{List.
-If \code{reduce.method = "latent"}, then \code{\link{lavaan}}'s \code{\link[lavaan]{cfa}}
-function will be used to create latent variables to reduce variables.
-Arguments should be input as a list. Some example arguments 
-(see \code{\link[lavaan]{lavOptions} for full details})}
-
 \item{verbose}{Boolean.
 Should network estimation parameters be printed?
 Defaults to \code{TRUE}.
@@ -178,52 +166,34 @@ Set to \code{FALSE} for no print out}
 \value{
 Returns a list containing:
 
-\item{EGA}{Results from \code{\link[EGAnet]{EGA}}}
+\item{lower}{Lower-order results from \code{\link[EGAnet]{EGA}}}
 
-\item{RI}{A list containing information about the random-intercept
-model (if the model converged):
+\item{lower_scores}{Estimated scores for the lower dimensions}
 
-\itemize{
+\item{lower_loadings}{Estaimted loadings for the lower dimensions}
 
-\item{fit}
-{The fit object for the random-intercept model using \code{\link[lavaan]{cfa}}}
+\item{score_type}{Type of scores estimated and used in the higher-order \code{\link[EGAnet]{EGA}}}
 
-\item{lavaan.args}
-{The arguments used in \code{\link[lavaan]{cfa}}}
-
-\item{loadings}
-{Standardized loadings from the random-intercept model}
-
-\item{correlation}
-{Residual correlations after accounting for the random-intercept model}
-
-}
-
-
-
-}
+\item{higher}{Higher-order results from \code{\link[EGAnet]{EGA}}}
 }
 \description{
-Estimates the number of dimensions after controlling for wording effects.
-EGA is applied in the residual of a random intercept item factor model (RIIFA) with one method factor and one substantive factor.
+Estimates EGA using the lower-order solution of \code{\link[igraph]{cluster_louvain}}
+to identify the lower-order dimensions and then uses factor or network loadings to estimate factor or
+network scores to estimate the higher-order dimensions
 }
 \examples{
 # Obtain example data
 data <- optimism
 
 \dontrun{
-# riEGA example
-opt.res <- riEGA(data = optimism)
+# hierEGA example
+opt.res <- hierEGA(data = optimism, algorithm = "louvain")
 }
 
-}
-\references{
-# Selection of CFA Estimator \cr
-Rhemtulla, M., Brosseau-Liard, P. E., & Savalei, V. (2012).
-When can categorical variables be treated as continuous? A comparison of robust continuous and categorical SEM estimation methods under suboptimal conditions.
-\emph{Psychological Methods}, \emph{17}, 354-373.
+
 }
 \author{
-Hudson F. Golino <hfg9s at virginia.edu>, Robert Moulder <rgm4fd@virginia.edu>, and
-Alexander P. Christensen <alexpaulchristensen@gmail.com>
+Luis E. Garrido <garrido.luiseduardo@gmail.com>,
+Alexander P. Christensen <alexpaulchristensen@gmail.com>, and
+Hudson F. Golino <hfg9s at virginia.edu>
 }
